<resources>
    <string name="H1_2_change_motion_success">Switching successful! Please hang up robot and restore the boot position, and then restart it immediately.</string>
    <string name="H1_2_change_motion_tip">Dangerous function! Please confirm with Unitree staff before using it. Are you sure to switch?</string>
    <string name="_xpopup_ext_day" />
    <string name="_xpopup_ext_hours" />
    <string name="_xpopup_ext_minutes" />
    <string name="_xpopup_ext_month" />
    <string name="_xpopup_ext_seconds" />
    <string name="_xpopup_ext_year" />
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_email">Email Address</string>
    <string name="account_phone">Mobile Number</string>
    <string name="add_follow">Follow</string>
    <string name="agentweb_camera">Camera</string>
    <string name="agentweb_cancel">Cancel</string>
    <string name="agentweb_click_open">Tap to continue</string>
    <string name="agentweb_coming_soon_download">Coming soon to download the file</string>
    <string name="agentweb_continue">Continue</string>
    <string name="agentweb_current_downloaded_length">downloaded:%s</string>
    <string name="agentweb_current_downloading_progress">Downloading:%s</string>
    <string name="agentweb_default_page_error">error~</string>
    <string name="agentweb_download">Download</string>
    <string name="agentweb_download_fail">Download failed!</string>
    <string name="agentweb_download_task_has_been_exist">The task already exists, do not repeat click to download!</string>
    <string name="agentweb_file_chooser">Files</string>
    <string name="agentweb_file_download">Download</string>
    <string name="agentweb_honeycomblow">Wi-Fi disconnected. Continue the download via mobile data network?</string>
    <string name="agentweb_leave">Go away</string>
    <string name="agentweb_leave_app_and_go_other_page">leaving %s and opening another app?</string>
    <string name="agentweb_loading">Loading ...</string>
    <string name="agentweb_max_file_length_limit">The selected file can not be larger than %s MB</string>
    <string name="agentweb_message_show_continue">Do you want to continue anyway?</string>
    <string name="agentweb_message_show_ssl_error">SSL Certificate error.</string>
    <string name="agentweb_message_show_ssl_expired">The certificate has expired.</string>
    <string name="agentweb_message_show_ssl_hostname_mismatch">The certificate Hostname mismatch.</string>
    <string name="agentweb_message_show_ssl_not_yet_valid">The certificate is not yet valid.</string>
    <string name="agentweb_message_show_ssl_untrusted">The certificate authority is not trusted.</string>
    <string name="agentweb_tips">Note</string>
    <string name="agentweb_title_ssl_error">SSL Certificate Error</string>
    <string name="agentweb_trickter">You have a new notice</string>
    <string name="already_new_version">already the latest version</string>
    <string name="and">&amp;</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="angle_show_name">Name</string>
    <string name="angle_show_value">Value</string>
    <string name="ap_connect_help">Help</string>
    <string name="ap_connect_tip_1">Turn off your phone‘s 4G/5G cellular network</string>
    <string name="ap_connect_tip_2">Please connect to Wi-Fi:</string>
    <string name="ap_content_failure_tip">"- Make sure that the robot and the cell phone are close to each other
- Make sure your phone is off the 4G/5G cellular
- Restart the robot and the App and try again."</string>
    <string name="ap_failure_tip">"- Make sure that the hotspot name is set without special symbols and spaces
- Make sure that the robot and the cell phone are close to each other
- Restart the robot and the App and try again."</string>
    <string name="ap_failure_title">Hotspot setting failed</string>
    <string name="ap_name_hint">Set the name of the robot hotspot</string>
    <string name="ap_not_connected">Not connected to a Wi Fi hotspot created by the robot</string>
    <string name="ap_pwd_hint">Set hotspot password</string>
    <string name="ap_step_desc_1">Hotspot Settings</string>
    <string name="ap_step_desc_2">Hotspot Connection</string>
    <string name="ap_step_desc_3">Connect the robot</string>
    <string name="ap_tip_1">Go to \"Settings\" - \"WLAN/ WIFI\"</string>
    <string name="ap_tip_2">"Set \"WLAN\" on
and connect the WLAN just set"</string>
    <string name="app_add_robot_tip">Please add robot</string>
    <string name="app_ai_0">Free Walk AI</string>
    <string name="app_ai_1">Classic AI</string>
    <string name="app_ap_create_failed">Wi-Fi Creation Failed</string>
    <string name="app_arm_back_beginning">Return to Home</string>
    <string name="app_arm_fun_1">Joint Control</string>
    <string name="app_arm_fun_2">Position Control</string>
    <string name="app_arm_fun_3">Trajectory</string>
    <string name="app_arm_jaw">Gripper</string>
    <string name="app_arm_joint1">Joint 1</string>
    <string name="app_arm_joint2">Joint 2</string>
    <string name="app_arm_joint3">Joint 3</string>
    <string name="app_arm_joint4">Joint 4</string>
    <string name="app_arm_joint5">Joint 5</string>
    <string name="app_arm_joint6">Joint 6</string>
    <string name="app_arm_position_pop_title">Fixing Point Setting</string>
    <string name="app_arm_power_off">Power off</string>
    <string name="app_arm_run_all">Full Execution</string>
    <string name="app_arm_title">Robotic Arm</string>
    <string name="app_ask_modify_remote_id">Change Remote Control ID</string>
    <string name="app_battery_charger">Battery &amp; Charger</string>
    <string name="app_battery_title_count">Cycle Times</string>
    <string name="app_battery_title_power">Battery Level</string>
    <string name="app_battery_title_state">Charge Cycles</string>
    <string name="app_battery_title_state_discharge">Discharge</string>
    <string name="app_battery_title_state_recharge">Charge</string>
    <string name="app_battery_title_tem1">BAT1</string>
    <string name="app_battery_title_tem2">BAT2</string>
    <string name="app_battery_title_tem3">MOS</string>
    <string name="app_battery_title_tem4">RES</string>
    <string name="app_battery_title_version">Software Version</string>
    <string name="app_battery_title_voltage">Voltage</string>
    <string name="app_bill_4g">4G Usage</string>
    <string name="app_bill_balance">Account Balance</string>
    <string name="app_bill_gpt">Number of questions asked by Clumsy AI</string>
    <string name="app_bill_gpt_unit">times</string>
    <string name="app_bill_head">Data Service Billing</string>
    <string name="app_bill_money_unit">Yuan</string>
    <string name="app_bill_month_format" formatted="false">%d/%d month</string>
    <string name="app_bill_not_real_time">Not real-time data, data update is delayed</string>
    <string name="app_bill_server">Cloud Service Data</string>
    <string name="app_bill_total">Total cost</string>
    <string name="app_btn_reset">Reset</string>
    <string name="app_btn_standard">Calibration Starts</string>
    <string name="app_buy_btn">Purchase</string>
    <string name="app_change_motion_tip">Please note that the robot will lie down during the modes switchover, do you continue?</string>
    <string name="app_change_wifi_tip">Do you want to try joining the wireless LAN \"%s\" of the robot dog and connect using AP mode.</string>
    <string name="app_cloud_dirty">Dirtiness Index</string>
    <string name="app_cloud_dirty_mild">Mildly</string>
    <string name="app_dog_change_contract">Change another connection</string>
    <string name="app_dog_rename">Rename</string>
    <string name="app_guide_common_problem">FAQ</string>
    <string name="app_guide_maintenance">Maintenance</string>
    <string name="app_guide_manual">User Manual</string>
    <string name="app_guide_remote">Remote Control</string>
    <string name="app_guide_tutorials_video">Tutorial Video</string>
    <string name="app_robot_dog">Robot</string>
    <string name="app_title_model">Model</string>
    <string name="app_title_sn">SN</string>
    <string name="app_type_location">Location</string>
    <string name="app_type_lost">Accumulated Loss</string>
    <string name="app_type_reserve">Wrong Sign</string>
    <string name="app_type_sign">Communication Quality</string>
    <string name="app_type_temperature">Casing Temperature</string>
    <string name="app_type_temperature_winding">Winding Temperature</string>
    <string name="b2_account_hint">Business Account</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_unbind">Unbind the robot</string>
    <string name="copy">Copy</string>
    <string name="hub_hint_enter_account">Please input your account</string>
    <string name="input_code">Code</string>
    <string name="log_select_date">Select date</string>
    <string name="login_account_email">Email Address</string>
    <string name="login_forget_pwd_title">Forget Password?</string>
    <string name="next_step">Next step</string>
    <string name="pop_agree_content">"欢迎来到Unitree Explore!
我们非常重视您的个人信息和隐私保护，为了更好地保障您的个人权益，请您认真阅读《用户协议》、《隐私协议》和《法律声明》的全部内容，点击“同意”按钮，表示您已知情并同意以上协议和以下约定。
1.为了保证软件的安全运行和账户安全，我们会申请收集您的设备信息、设备MAC地址、IP地址、WLAN MAC地址。
2.上传或者拍摄图片，需要使用您的媒体影音、图片、相机权限，再使用语音与机器人通话时，需要使用您的麦克风权限。
3.为了方便判断您当前使用的网络信息以方便与机器人进行连接，我们会需要使用您的位置权限。
4.为了方便您分享自己的机器人使用能力，我们可能会访问您的软件安装列表。
5.我们尊重您的选择权，您可以访问、修改、删除您的个人信息并管理您的授权，我们也为您提供注销、投诉渠道。"</string>
    <string name="pop_protocol_agree">同意并继续</string>
    <string name="pop_protocol_refuse">不同意,退出</string>
    <string name="pop_protocol_title">隐私保护政策</string>
    <string name="send_code">Send Code</string>
    <string name="sensor_error_clear">Clear error</string>
    <string name="sensor_type_temperature">Temperature</string>
    <string name="sensor_type_torque">Torque</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_phone">Mobile Number</string>
    <string name="title_dog_setting">Robot Settings</string>
    <string name="upload_log_tip">Select and upload error logs generated within the app for us to troubleshoot issues</string>
</resources>