<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/root" android:background="@drawable/item_expand_dark" android:padding="@dimen/common_margin" style="@style/MatchWrap"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/include_hand" layout="@layout/include_g1_hand" />
    <TextView android:id="@id/typeSign" android:layout_marginTop="25.0dip" android:text="@string/app_type_sign" android:layout_marginEnd="35.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/MotorH1Type" />
    <TextView android:id="@id/typeLost" android:text="@string/app_type_lost" app:layout_constraintEnd_toEndOf="@id/typeSign" app:layout_constraintTop_toBottomOf="@id/typeSign" style="@style/MotorH1Type" />
    <TextView android:id="@id/typeLocation" android:text="@string/app_type_location" app:layout_constraintEnd_toEndOf="@id/typeSign" app:layout_constraintTop_toBottomOf="@id/typeLost" style="@style/MotorH1Type" />
    <TextView android:id="@id/typeTemperature" android:text="@string/app_type_temperature" app:layout_constraintEnd_toEndOf="@id/typeSign" app:layout_constraintTop_toBottomOf="@id/typeLocation" style="@style/MotorH1Type" />
    <TextView android:id="@id/typeTemperatureWinding" android:text="@string/app_type_temperature_winding" app:layout_constraintEnd_toEndOf="@id/typeSign" app:layout_constraintTop_toBottomOf="@id/typeTemperature" style="@style/MotorH1Type" />
    <TextView android:id="@id/typeReserve" android:text="@string/app_type_reserve" app:layout_constraintEnd_toEndOf="@id/typeSign" app:layout_constraintTop_toBottomOf="@id/typeTemperatureWinding" style="@style/MotorH1Type" />
</androidx.constraintlayout.widget.ConstraintLayout>