<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@color/main_title_light" style="@style/MatchMatch.Vertical"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.unitree.baselibrary.widget.HeaderBar app:titleText="@string/app_guide_manual" style="@style/HeadStyle.Black" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="20.0sp" android:textColor="@color/common_white" android:id="@id/robot_tv" android:background="@drawable/manual_robot" android:paddingTop="24.0dip" android:layout_width="238.0dip" android:layout_height="205.0dip" android:text="@string/app_robot_dog" android:paddingStart="40.0dip" android:paddingEnd="30.0dip" android:layout_marginStart="38.0dip" />
        <TextView android:textSize="20.0sp" android:textColor="@color/common_white" android:id="@id/remote_tv" android:background="@drawable/manual_remote_g1" android:paddingTop="24.0dip" android:layout_width="238.0dip" android:layout_height="205.0dip" android:text="@string/app_guide_remote" android:paddingStart="40.0dip" android:paddingEnd="30.0dip" android:layout_marginStart="@dimen/common_margin_middle" />
        <TextView android:textSize="20.0sp" android:textColor="@color/common_white" android:id="@id/power_tv" android:background="@drawable/manual_power" android:paddingTop="24.0dip" android:layout_width="238.0dip" android:layout_height="205.0dip" android:text="@string/app_battery_charger" android:paddingStart="40.0dip" android:layout_marginStart="@dimen/common_margin_middle" android:layout_marginEnd="38.0dip" />
    </LinearLayout>
</LinearLayout>