<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="30.0sp" android:textColor="#ff20202c" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:text="@string/login_forget_pwd_title" android:layout_marginStart="33.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="97.0dip" android:text="@string/hub_hint_enter_account" android:alpha="0.66" android:layout_marginStart="33.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="17.0sp" android:textColor="@color/common_white" android:gravity="center" android:id="@id/send_btn" android:background="@drawable/bg_btn_login" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginBottom="46.0dip" android:text="@string/send_code" android:layout_marginStart="36.0dip" android:layout_marginEnd="36.0dip" app:layout_constraintBottom_toBottomOf="parent" />
    <EditText android:textSize="@dimen/text_size_13" android:textColor="@color/input" android:textColorHint="@color/input" android:gravity="center_vertical" android:id="@id/account_et" android:background="@drawable/login_bg_input" android:layout_width="0.0dip" android:layout_height="48.0dip" android:hint="@string/b2_account_hint" android:maxLength="64" android:drawablePadding="@dimen/common_margin_18" android:inputType="textEmailAddress" android:imeOptions="flagNoExtractUi" android:drawableStart="@drawable/login_ic_account" android:paddingStart="33.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/send_btn" app:layout_constraintStart_toStartOf="@id/send_btn" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>