<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="17.0sp" android:textColor="@color/common_white" android:gravity="center" android:id="@id/register_btn" android:background="@drawable/bg_btn_login" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginBottom="46.0dip" android:text="@string/next_step" android:layout_marginStart="36.0dip" android:layout_marginEnd="36.0dip" app:layout_constraintBottom_toBottomOf="parent" />
    <EditText android:textSize="13.5sp" android:textColor="@color/input" android:textColorHint="@color/input" android:gravity="center_vertical" android:id="@id/account_et" android:background="@drawable/login_bg_input" android:layout_width="0.0dip" android:layout_height="48.0dip" android:layout_marginTop="@dimen/common_margin_small" android:layout_marginBottom="@dimen/common_margin" android:hint="@string/login_account_email" android:maxLength="64" android:drawablePadding="@dimen/common_margin_18" android:inputType="textEmailAddress" android:imeOptions="flagNoExtractUi" android:drawableStart="@drawable/ic_account_selector" android:paddingStart="@dimen/common_margin_18" app:layout_constraintBottom_toTopOf="@id/code_et" app:layout_constraintEnd_toEndOf="@id/register_btn" app:layout_constraintStart_toStartOf="@id/register_btn" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
    <EditText android:textSize="13.5sp" android:textColor="@color/input" android:textColorHint="@color/input" android:gravity="center_vertical" android:id="@id/code_et" android:background="@drawable/login_bg_input" android:layout_width="0.0dip" android:layout_height="48.0dip" android:layout_marginTop="8.0dip" android:hint="@string/input_code" android:maxLength="20" android:drawablePadding="@dimen/common_margin_18" android:imeOptions="actionDone|flagNoExtractUi" android:drawableStart="@drawable/login_ic_code" android:paddingStart="@dimen/common_margin_18" android:layout_marginEnd="25.0dip" app:layout_constraintBottom_toTopOf="@id/register_btn" app:layout_constraintEnd_toStartOf="@id/code_iv" app:layout_constraintStart_toStartOf="@id/account_et" app:layout_constraintTop_toBottomOf="@id/account_et" app:layout_constraintVertical_chainStyle="packed" style="@style/Password" />
    <WebView android:id="@id/web_view" android:scrollbars="none" android:layout_width="150.0dip" android:layout_height="60.0dip" app:layout_constraintBottom_toBottomOf="@id/code_iv" app:layout_constraintEnd_toEndOf="@id/code_iv" app:layout_constraintStart_toStartOf="@id/code_iv" />
    <TextView android:textSize="17.0sp" android:textColor="@color/phone_verify_selector" android:gravity="center" android:id="@id/verify_btn" android:background="@drawable/bg_phone_verify_selector" android:layout_width="126.0dip" android:layout_height="44.0dip" android:text="@string/send_code" app:layout_constraintBottom_toBottomOf="@id/code_iv" app:layout_constraintEnd_toEndOf="@id/code_iv" app:layout_constraintStart_toStartOf="@id/code_iv" app:layout_constraintTop_toTopOf="@id/code_iv" />
    <ImageView android:id="@id/code_iv" android:layout_width="140.0dip" android:layout_height="50.0dip" android:scaleType="fitXY" app:layout_constraintBottom_toBottomOf="@id/code_et" app:layout_constraintEnd_toEndOf="@id/account_et" app:layout_constraintTop_toTopOf="@id/code_et" />
    <TextView android:textSize="17.0sp" android:textStyle="bold" android:textColor="@color/common_black" android:id="@id/current_mode_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/common_margin" android:text="@string/sign_up_phone" app:layout_constraintBottom_toTopOf="@id/account_et" app:layout_constraintStart_toStartOf="@id/account_et" />
    <TextView android:textSize="12.0sp" android:textColor="@color/common_black" android:id="@id/change_mode_tv" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/common_margin" android:text="@string/sign_up_email" app:layout_constraintBottom_toTopOf="@id/account_et" app:layout_constraintEnd_toEndOf="@id/account_et" />
</androidx.constraintlayout.widget.ConstraintLayout>